  * Rediffed 02-module-in-kernel.dpatch.
  * Again removing reimported useless whitespaces at EOL and EOF in debian/*.

  [ Michael Meskes ]
  * Removed two additional include files from guest-sources again because they
    were only needed for amd64.
  * Install VBoxAddIF.sh which was lost during transition, closes: #458991.
  * Added a recommend to libhal, see #448347 for details.

 -- Michael Meskes <meskes@debian.org>  Fri, 04 Jan 2008 10:51:03 +0100

virtualbox-ose (1.5.4-dfsg-1) unstable; urgency=low

  [ Michael Meskes ]
  * Do not build guest-utils on amd64 because 64bit guests are nor support
    yet.
  * Removed build time dependency on i32-libs that is not really needed.
  * New upstream version.
  * Removed some new files because of licensing problems:
    ./src/VBox/Additions/linux/selinux-fedora
    ./src/VBox/Additions/linux/xmouse/Imakefile
    ./src/VBox/HostServices/SharedClipboard/linux-stub.cpp
  * Removed the following patches because they are not needed anymore:
    01-configure.dpatch
    08-no-kernel.dpatch
    09-fix-initscript.dpatch
    12-kcompat-2.6.24.dpatch
  * Replaced our registration patch by the new config option taken from SVN.
  * Rediffed and renumbered some of the remaining patches.
  * Added build dependency on libpulse-dev.
  * Moved shell scripts from /usr/lib to /usr/share.
  * g++-multilib on amd64 depends on libc6-dev-i386, no need to specify both
    as build dependency.
  * Manually install missing include files for guest-sources.
  * Changed layout of guest-sources package to not have to patch the Makefile.
  * Changed patch accordingly.
  * Removed old 02-host-module patch, it wasn't needed anymore.
  * Added new patch 02-module-in-kernel to make sure modules build in a kernel
    build environment.

  [ Hilko Bengen ]
  * Make dh_strip ignore symlink(s) in /usr/share

  [ Daniel Baumann ]
  * Again fixing dpatch headers.
  * Again removing reimported useless whitespaces at EOL and EOF in debian/*.