@@ -1,0 +1,2 @@
+[type: gettext/rfc822deb] virtualbox-ose.templates
+
