@@ -1,0 +1,22 @@
+#!/bin/sh -e
+
+new=UPSTREAM
+old=`echo $2 | cut -f1 -d"-"`
+
+. /usr/share/debconf/confmodule
+
+if [ $new != $old ]; then
+	db_title Upgrading virtualbox-ose
+	db_fset virtualbox-ose/upstream_version_change seen false
+	db_input high virtualbox-ose/upstream_version_change || true
+	db_go
+	db_get virtualbox-ose/upstream_version_change || true
+	if [ "$RET" = false ]; then
+		db_stop
+		exit 1
+	fi
+	db_stop
+fi
+
+#DEBHELPER#
+
