@@ -1,0 +1,8 @@
+Template: virtualbox-ose/upstream_version_change
+Type: boolean
+Default: false
+_Description: Proceed with virtualbox-ose upgrade despite losing snapshots?
+ You are currently upgrading virtualbox-ose to a new upstream version. All
+ snapshots will be discarded by this upgrade, because snapshots are version
+ specific.
+
